# environment

./: README.md
feren-os/hplip-3.20.2/: Dat2drv  Dat2drv.cpp  Dat2drv.h  FindPPD.cpp  FindPPD.h  Makefile  Makefile.am  Makefile.in  Makefile_dat2drv  Normalize.cpp  Normalize.h  class_cups_drv.inc  class_rpm_build.sh  config.status  configure  configure.in  createPPD.sh  cups_drv.inc  cupsext.la  cupsext_la-cupsext.lo  dat2drv  foomatic_drv.inc  hp  hpcups  hpcupsfax  hpijs-drv  hplip-systray.desktop  hplip.conf  hplip.conf.in  hplip.list  hplip.list.in  hplipclassdriver.spec  hpmudext.la  hpmudext_la-hpmudext.lo  hppgsz  hpps  ipmain.lo  libapdk.la  libapdk_la-apollo21xx.lo  libapdk_la-apollo2560.lo  (+144 more)
feren-os/hplip-3.20.2/.deps/: cupsext_la-cupsext.Plo  dat2drv-Dat2drv.Po  dat2drv-Normalize.Po  fat.Po  hp-hp.Po  hpcups-BreakTables.Po  hpcups-ColorMatcher.Po  hpcups-Compressor.Po  hpcups-Encapsulator.Po  hpcups-EncapsulatorFactory.Po  hpcups-ErnieFilter.Po  hpcups-HPCupsFilter.Po  hpcups-Halftoner.Po  hpcups-Hbpl1.Po  hpcups-Hbpl1_Wrapper.Po  hpcups-Job.Po  hpcups-LJColor.Po  hpcups-LJFastRaster.Po  hpcups-LJJetReady.Po  hpcups-LJMono.Po  hpcups-LJZjStream.Po  hpcups-LJZxStream.Po  hpcups-Lidil.Po  hpcups-LidilCompress.Po  hpcups-Mode10.Po  hpcups-Mode2.Po  hpcups-Mode3.Po  hpcups-Mode9.Po  hpcups-ModeDeltaPlus.Po  hpcups-ModeJbig.Po  hpcups-ModeJpeg.Po  hpcups-Pcl3.Po  hpcups-Pcl3Gui.Po  hpcups-Pcl3Gui2.Po  hpcups-Pipeline.Po  hpcups-Processor.Po  hpcups-QuickConnect.Po  hpcups-RasterSender.Po  hpcups-RunLenEncoding.Po  hpcups-Scaler.Po  (+160 more)
feren-os/hplip-3.20.2/.libs/: cupsext.la  cupsext.lai  hp  hpcupsfax  hpmudext.la  hpmudext.lai  libapdk.la  libhpdiscovery.la  libhpdiscovery.lai  libhpdiscovery.so.0.0.1  libhpip.la  libhpip.lai  libhpip.so.0.0.1  libhpipp.la  libhpipp.lai  libhpipp.so.0.0.1  libhpmud.la  libhpmud.lai  libhpmud.so.0.0.6  libsane-hpaio.la  libsane-hpaio.lai  libsane-hpaio.so.1.0.0  pcardext.la  ptest  scanext.la  scanext.lai
feren-os/hplip-3.20.2/base/: imageprocessing.py  models.py  module.py  password.py  status.py  utils.py
feren-os/hplip-3.20.2/common/: utils.c  utils.h
feren-os/hplip-3.20.2/doc/: commandline.html  copying.html  devicemanager.html  faxtrouble.html  gettinghelp.html  hpscan.html  index.html  mainttask.html  plugins.html  print.html  printing.html  printoptions.html  printtroubleshooting.html  scanning.html  scantrouble.html  sendfax.html  setup.html  systray.html  troubleshooting.html  uninstalling.html  upgrading.html
feren-os/hplip-3.20.2/fax/: ledmfax.py
feren-os/hplip-3.20.2/installer/: core_install.py  dcheck.py  text_install.py
feren-os/hplip-3.20.2/io/hpmud/: hpmud.h  jd.c
feren-os/hplip-3.20.2/ip/: hpip.h
feren-os/hplip-3.20.2/ppd/hpcups/: apollo-2100.ppd  apollo-2150.ppd  apollo-2200.ppd  apollo-2500.ppd  apollo-2600.ppd  apollo-2650.ppd  apollo-p2000-u.ppd  apollo-p2250.ppd  hp-2000c.ppd  hp-2500c.ppd  hp-910.ppd  hp-915.ppd  hp-amp.ppd  hp-business_inkjet_1000.ppd  hp-business_inkjet_1100.ppd  hp-business_inkjet_1200.ppd  hp-business_inkjet_2200.ppd  hp-business_inkjet_2230.ppd  hp-business_inkjet_2250-pcl3.ppd  hp-business_inkjet_2280-pcl3.ppd  hp-business_inkjet_2300-pcl3.ppd  hp-business_inkjet_2600-pcl3.ppd  hp-business_inkjet_2800-pcl3.ppd  hp-business_inkjet_3000-pcl3.ppd  hp-color_inkjet_printer_cp1700.ppd  hp-color_laserjet_1600.ppd  hp-color_laserjet_2500_series.ppd  hp-color_laserjet_2600n.ppd  hp-color_laserjet_3000-pcl3.ppd  hp-color_laserjet_3500.ppd  hp-color_laserjet_3500n.ppd  hp-color_laserjet_3550.ppd  hp-color_laserjet_3550n.ppd  hp-color_laserjet_3600.ppd  hp-color_laserjet_3700-pcl3.ppd  hp-color_laserjet_3700n.ppd  hp-color_laserjet_3800-pcl3.ppd  hp-color_laserjet_4500-pcl3.ppd  hp-color_laserjet_4550-pcl3.ppd  hp-color_laserjet_4600-pcl3.ppd  (+766 more)
feren-os/hplip-3.20.2/ppd/hpijs/: apollo-2100-hpijs.ppd  apollo-2150-hpijs.ppd  apollo-2200-hpijs.ppd  apollo-2500-hpijs.ppd  apollo-2600-hpijs.ppd  apollo-2650-hpijs.ppd  apollo-p2000-u-hpijs.ppd  apollo-p2250-hpijs.ppd  hp-2000c-hpijs.ppd  hp-2500c-hpijs.ppd  hp-910-hpijs.ppd  hp-915-hpijs.ppd  hp-amp-hpijs.ppd  hp-business_inkjet_1000-hpijs.ppd  hp-business_inkjet_1100-hpijs.ppd  hp-business_inkjet_1200-hpijs.ppd  hp-business_inkjet_2200-hpijs.ppd  hp-business_inkjet_2230-hpijs.ppd  hp-business_inkjet_2250-pcl3-hpijs.ppd  hp-business_inkjet_2280-pcl3-hpijs.ppd  hp-business_inkjet_2300-pcl3-hpijs.ppd  hp-business_inkjet_2600-pcl3-hpijs.ppd  hp-business_inkjet_2800-pcl3-hpijs.ppd  hp-business_inkjet_3000-pcl3-hpijs.ppd  hp-color_inkjet_printer_cp1700-hpijs.ppd  hp-color_laserjet_1600-hpijs.ppd  hp-color_laserjet_2500_series-hpijs.ppd  hp-color_laserjet_2600n-hpijs.ppd  hp-color_laserjet_3000-pcl3-hpijs.ppd  hp-color_laserjet_3500-hpijs.ppd  hp-color_laserjet_3500n-hpijs.ppd  hp-color_laserjet_3550-hpijs.ppd  hp-color_laserjet_3550n-hpijs.ppd  hp-color_laserjet_3600-hpijs.ppd  hp-color_laserjet_3700-pcl3-hpijs.ppd  hp-color_laserjet_3700n-hpijs.ppd  hp-color_laserjet_3800-pcl3-hpijs.ppd  hp-color_laserjet_4500-pcl3-hpijs.ppd  hp-color_laserjet_4550-pcl3-hpijs.ppd  hp-color_laserjet_4600-pcl3-hpijs.ppd  (+750 more)
feren-os/hplip-3.20.2/prnt/: cups.py
feren-os/hplip-3.20.2/prnt/drv/: hpcups.drv  hpcups.drv.in  hpcups.drv.in.template  hpijs.drv  hpijs.drv.in  hpijs.drv.in.template
feren-os/hplip-3.20.2/prnt/filters/: hpps
feren-os/hplip-3.20.2/prnt/hpcups/: Encapsulator.cpp  HPCupsFilter.cpp  Hbpl1.cpp  Hbpl1_Wrapper.cpp  ImageProcessor.h  ModeJbig.cpp  PCLmGenerator.h  RunLenEncoding.cpp  RunLenEncoding.h  common_defines.h  flate_colorspace.h  genJPEGStrips.cpp  genPCLm.cpp  genPCLm.h
feren-os/hplip-3.20.2/prnt/hpps/: hppsfilter.c  hppsfilter.h  psbooklet.c  psspec.c  psspec.h  psutil.c
feren-os/hplip-3.20.2/protocol/discovery/: mdns.c
feren-os/hplip-3.20.2/scan/sane/: common.h  escl.c  escli.h  (+8 more)
feren-os/hplip-3.20.2/selinux/: mypol.pp  mypol.te
feren-os/hplip-3.20.2/ui4/: printdialog.py  printsettingstoolbox.py  scandialog.py  setupdialog.py
feren-os/hplip-3.20.2/ui5/: devmgr5.py  devmgr5_base.py  scandialog.py  setupdialog.py  setupdialog_base.py
(+11 files in other folders)
